--- a/catalogo-multipag-his/src/app/main-page/main-page.component.html
+++ b/catalogo-multipag-his/src/app/main-page/main-page.component.html
@@ -1,4 +1,4 @@
-<app-form-panel (cercaEvent)="passaPaginaCerca()" (contaEvent)="passaPaginaConta()"></app-form-panel>
+<app-form-panel (cercaEvent)="passaPaginaCerca($event)" (contaEvent)="passaPaginaConta($event)" (genereAggEvent)="aggiungi($event)"></app-form-panel>
 <br>
 <table>
     <tr>
