--- a/catalogo-multipag-his/src/app/form-panel/form-panel.component.html
+++ b/catalogo-multipag-his/src/app/form-panel/form-panel.component.html
@@ -1,11 +1,11 @@
 codice
-<input type="text" [(ngModel)]="prodotto.codice">
+<input type="number" [(ngModel)]="prodotto.codice">
 descrizione
 <input type="text" [(ngModel)]="prodotto.descrizione">
 prezzo
-<input type="text" [(ngModel)]="prodotto.prezzo">
+<input type="number" [(ngModel)]="prodotto.prezzo">
 <br>
 <br>
-<button (click)="aggiungi()">Aggungi</button>
+<button (click)="generaAggEvent()">Aggungi</button>
 <button (click)="conta()">Conta</button>
 <button (click)="ricerca()">Ricerca</button>
